<resources>
    <string name="app_name">ToDoHub</string>
    <string name="default_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="default_day">Sunday</string>
    <string name="settings_action">Settings</string>
    <string name="settings_action_prompt">How would you like to sort your list?</string>
    <string name="button_uncompleted">Uncompleted Tasks</string>
    <string name="button_completed">Completed Tasks</string>
    <string name="button_all">All Tasks</string>
    <string name="positive_btn">Okay</string>
    <string name="new_task_prompt_main">Enter new task: </string>
    <string name="new_task_prompt_title">Task name: </string>
    <string name="new_task_prompt_desc">Task description: </string>
    <string name="new_task_prompt_due_date">Set Due Date</string>
    <string name="new_task_prompt_positive">Add</string>
    <string name="new_task_prompt_negative">Cancel</string>
    <string name="null_due_date">Invalid due date, try again.</string>
    <string name="null_title">Invalid title, try again.</string>
    <string name="constant_due_date_string">Due:</string>
    <string name="add_subtask_btn_main">Add Subtask</string>
    <string name="default_prompt">Click here to start a task!</string>

</resources>