<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/new_task_prompt_title_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/new_task_dialog_fragment_title_TV_marginStart"
                android:layout_marginTop="@dimen/new_task_dialog_fragment_title_TV_marginTop"
                android:text="@string/new_task_prompt_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/new_task_prompt_desc_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/new_task_dialog_fragment_desc_TV_marginStart"
                android:layout_marginTop="@dimen/new_task_dialog_fragment_desc_TV_marginTop"
                android:text="@string/new_task_prompt_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_task_prompt_title_ET" />

            <Button
                android:id="@+id/new_task_prompt_due_date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/new_task_dialog_fragment_due_date_btn_marginTop"
                android:onClick="onDueDateBtn"
                android:text="@string/new_task_prompt_due_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_task_prompt_desc_ET" />

            <EditText
                android:id="@+id/new_task_prompt_title_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/new_task_dialog_fragment_title_ET_marginLeft"
                android:layout_marginRight="@dimen/new_task_dialog_fragment_title_ET_marginRight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_task_prompt_title_TV" />

            <EditText
                android:id="@+id/new_task_prompt_desc_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/new_task_dialog_fragment_desc_ET_marginLeft"
                android:layout_marginRight="@dimen/new_task_dialog_fragment_desc_ET_marginRight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_task_prompt_desc_TV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>